--- a/Atlas_robot_pet/presenterserver/presenterserver/display/ui/templates/view.html
+++ b/Atlas_robot_pet/presenterserver/presenterserver/display/ui/templates/view.html
@@ -96,52 +96,26 @@ function startViewVideo(){
                         //add space between msg and face
                         //if upper space is not enough show the msg at the bottom
                         if(50>pos[1]){
-                           // ctx.fillText(msg,pos[0],pos[3]+50)
+                            ctx.fillText(msg,pos[0],pos[3]+50)
                         }
                         else{
-                          //  ctx.fillText(msg,pos[0],pos[1]-10)
+                            ctx.fillText(msg,pos[0],pos[1]-10)
                         }
                         ctx.beginPath()
                         // 1/3 space draw line
-                        if(msg == 'points'){
-                        ctx.strokeStyle = "#0F4F00"
-                        ctx.arc(pos[0],pos[1],6,0,2*Math.PI)
-                        ctx.fillStyle = "#6CFF33"
-                        ctx.fill()
-
-                        }else if(msg == 'hand_box'){
-                        ctx.strokeStyle = "#FF0000"
-                        ctx.lineWidth = 5
                         ctx.moveTo(pos[0],pos[1])
-                        ctx.lineTo(pos[2],pos[1])
-                        ctx.moveTo(pos[2],pos[1])
-                        ctx.lineTo(pos[2],pos[3])
-                        ctx.moveTo(pos[0],pos[1])
+                        ctx.lineTo(pos[0],pos[3]/3+pos[1]*2/3)
+                        ctx.moveTo(pos[0],pos[3]*2/3+pos[1]/3)
                         ctx.lineTo(pos[0],pos[3])
-                        ctx.moveTo(pos[0],pos[3])
+                        ctx.lineTo(pos[0]*2/3+pos[2]/3,pos[3])
+                        ctx.moveTo(pos[0]/3+pos[2]*2/3,pos[3])
                         ctx.lineTo(pos[2],pos[3])
-                        // }else if(msg == 'hand_point'){
-                        // ctx.strokeStyle = "#33FAFF"
-                        // ctx.arc(pos[0],pos[1],3,0,2*Math.PI)
-                        // ctx.fillStyle = "#33FAFF"
-                        // ctx.fill()
-                        // }else if(msg == 'hand'){
-                        // ctx.strokeStyle = "#FC33FF"
-                        // ctx.lineWidth = 3
-                        // ctx.moveTo(pos[0],pos[1])
-                        // ctx.lineTo(pos[2],pos[3])
-                    
-                        }else if(msg == 'body'){
-                        ctx.strokeStyle = "#FFF700"
-                        ctx.lineWidth = 5
-                        ctx.moveTo(pos[0],pos[1])
-                        ctx.lineTo(pos[2],pos[3])
-                        }else{
-                            ctx.font = "30px Arial";
-                            ctx.lineWidth = 5
-                            ctx.fillStyle = "#33FAFF"
-                            ctx.fillText(msg, 200, 200);
-                        }
+                        ctx.lineTo(pos[2],pos[3]*2/3+pos[1]/3)
+                        ctx.moveTo(pos[2],pos[3]/3+pos[1]*2/3)
+                        ctx.lineTo(pos[2],pos[1])
+                        ctx.lineTo(pos[2]*2/3+pos[0]/3,pos[1])
+                        ctx.moveTo(pos[0]*2/3+pos[2]/3,pos[1])
+                        ctx.lineTo(pos[0],pos[1])
                         ctx.stroke()
                     }
             }
